--- a/api/Tests/Synonym.IntegrationTest/Synonym.IntegrationTest.csproj
+++ b/api/Tests/Synonym.IntegrationTest/Synonym.IntegrationTest.csproj
@@ -5,22 +5,25 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
-
-        <RootNamespace>Synonym.Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-        <PackageReference Include="Moq" Version="4.17.2" />
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Synonym.Api\Synonym.Api.csproj" />
-      <ProjectReference Include="..\Synonym.Core\Synonym.Core.csproj" />
+      <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
+        <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.4\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Synonym.Api\Synonym.Api.csproj" />
+      <ProjectReference Include="..\..\Synonym.Infra\Synonym.Infra.csproj" />
     </ItemGroup>
 
 </Project>
