--- a/api/Synonym.Api/appsettings.json
+++ b/api/Synonym.Api/appsettings.json
@@ -15,6 +15,12 @@
     },
     "WriteTo": [
       {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
         "Name": "File",
         "Args": {
           "path": "../logs/webapi-.log",
