--- a/api/Synonym.Api/appsettings.json
+++ b/api/Synonym.Api/appsettings.json
@@ -23,8 +23,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "../logs/webapi-.log",
-          "rollingInterval": "Day",
+          "path": "/logs/webapi-.log",
+          "rollingInterval": "Hour",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
         }
       }
