new infrastructure project, no entityframework. Only in memory

--- a/api/Synonym.Api/Synonym.Api.csproj
+++ b/api/Synonym.Api/Synonym.Api.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Synonym.Core\Synonym.Core.csproj" />
+      <ProjectReference Include="..\Synonym.Infrastructure\Synonym.Infrastructure.csproj" />
       <ProjectReference Include="..\Synonym.Infra\Synonym.Infra.csproj" />
     </ItemGroup>
 
