--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,9 +10,11 @@ WORKDIR /src
 COPY ["Synonym.Api/Synonym.Api.csproj", "Synonym.Api/"]
 COPY ["Synonym.Core/Synonym.Core.csproj", "Synonym.Core/"]
 COPY ["Synonym.Infra/Synonym.Infra.csproj", "Synonym.Infra/"]
+COPY ["Synonym.Infrastructure/Synonym.Infrastructure.csproj", "Synonym.Infrastructure/"]
 RUN dotnet restore "Synonym.Api/Synonym.Api.csproj"
 RUN dotnet restore "Synonym.Core/Synonym.Core.csproj"
 RUN dotnet restore "Synonym.Infra/Synonym.Infra.csproj"
+RUN dotnet restore "Synonym.Infrastructure/Synonym.Infrastructure.csproj"
 COPY . .
 WORKDIR "/src/Synonym.Api"
 RUN dotnet restore "Synonym.Api.csproj"
