Dockerfile for api

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,22 +7,22 @@ EXPOSE 5001
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Synonym.Api/Synonym.Api.csproj", "Synonym.Api/"]
-COPY ["Synonym.Core/Synonym.Core.csproj", "Synonym.Core/"]
-COPY ["Synonym.Infrastructure/Synonym.Infrastructure.csproj", "Synonym.Infrastructure/"]
-RUN dotnet restore "Synonym.Api/Synonym.Api.csproj"
-RUN dotnet restore "Synonym.Core/Synonym.Core.csproj"
-RUN dotnet restore "Synonym.Infrastructure/Synonym.Infrastructure.csproj"
+COPY ["Synonyms.Api/Synonyms.Api.csproj", "Synonyms.Api/"]
+COPY ["Synonyms.Core/Synonyms.Core.csproj", "Synonyms.Core/"]
+COPY ["Synonyms.Infrastructure/Synonyms.Infrastructure.csproj", "Synonyms.Infrastructure/"]
+RUN dotnet restore "Synonyms.Api/Synonyms.Api.csproj"
+RUN dotnet restore "Synonyms.Core/Synonyms.Core.csproj"
+RUN dotnet restore "Synonyms.Infrastructure/Synonyms.Infrastructure.csproj"
 COPY . .
-WORKDIR "/src/Synonym.Api"
-RUN dotnet restore "Synonym.Api.csproj"
-RUN dotnet build "Synonym.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/Synonyms.Api"
+RUN dotnet restore "Synonyms.Api.csproj"
+RUN dotnet build "Synonyms.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Synonym.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "Synonyms.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 RUN mkdir /logs
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Synonym.Api.dll"]
+ENTRYPOINT ["dotnet", "Synonyms.Api.dll"]
