--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Node.js
         uses: actions/setup-node@v2
+      - name: npm install and build
         run: |
           cd client
           npm ci
